# Diabetes-Prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: predict.py
data/: diet_recommendations.csv
public/: index.html
src/: patient_app.py  train_diabetes_model.py
