[project]
name = "diabetes-prediction"
version = "0.1.0"
description = "Educational diabetes prediction mini-project with Streamlit and Vercel-compatible UIs."
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]

[tool.vercel]
entrypoint = "api.predict:handler"
